# speedtest-tool-fastcom-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  publish.yml
src/: lib.rs  logger.rs  main.rs  speedtest.rs
src/speedtest/: controller.rs  model.rs  recorder.rs  reporter.rs  utility.rs
util/: open-appdata.cmd
