[package]
name = "speedtest-tool-fastcom-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
chrono = "0.4.22"
csv = "1.1.6"
fern = "0.6.1"
log = "0.4.17"
path-clean = "0.1.0"
playwright = "0.0.20"
tokio = "1.21.0"
